opam-version: "2.0"
name: "jerboa"
version: "0.1"
synopsis: "Jerboa is a minimalistic web framework"
description: """
Jerboa is web framework, which tries to be as minimalistic and simple to use as possible with no magic included.
"""
maintainer: "Robert Toth <kkdstryker@gmail.com>"
authors: ["Robert Toth"]
homepage: "https://github.com/StrykerKKD/Jerboa"
bug-reports: "https://github.com/StrykerKKD/Jerboa/issues"
dev-repo: "git+https://github.com/StrykerKKD/Jerboa.git"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "lwt" {>= "4.1.0"}
  "cohttp-lwt-unix" {>= "1.1.1"}
  "base" {>= "v0.11.1"}
  "alcotest" {with-test}
  "odoc" {with-doc}
  "ocaml" {>= "4.04.2"}
]